# testing-dg-workspace

./: dg.toml
projects/my-cool-project/: pyproject.toml
projects/my-cool-project/src/my_cool_project/: definitions.py
projects/project-2/: pyproject.toml
projects/project-2/src/project_2/: definitions.py
projects/project-2/src/project_2/defs/ingest_files/: replication.yaml
projects/project-2/src/project_2/defs/jdbt/: component.yaml
