[project]
name = "my_cool_project"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
]

[project.entry-points]
"dagster_dg.plugin" = { my_cool_project = "my_cool_project.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "my_cool_project"


[tool.dg.project.python_environment]
uv_managed = true
