[project]
name = "project_2"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-dbt>=0.26.14",
    "dagster-sling>=0.26.14",
    "dbt>=1.0.0.40.1",
    "duckdb>=1.2.2",
]

[project.entry-points]
"dagster_dg.plugin" = { project_2 = "project_2.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "project_2"


[tool.dg.project.python_environment]
uv_managed = true
